<resources>

    <string name="app_name">Aavartan</string>

    <!--  Bottom Nav Text  -->
    <string name="home">Home</string>
    <string name="events">Events</string>
    <string name="attraction">Attraction</string>
    <string name="schedule">Schedule</string>
    <string name="account">Account</string>

    <!--  Options Text  -->
    <string name="notifications">Notifications</string>
    <string name="location">Location</string>

    <string name="s_h_i_e_l_d">S.H.I.E.L.D.</string>
    <string name="skip"><![CDATA[Skip >]]></string>
    <string name="logo">LOGO</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="signup">Signup</string>
    <string name="login">Login</string>
    <string name="background">Background</string>
    <string name="or">or</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="_91">+91</string>
    <string name="college">College</string>
    <string name="branch">Branch</string>
    <string name="course">Course</string>
    <string name="semester">Semester</string>
    <string name="city">City</string>
    <string name="event_poster">Event Poster</string>
    <string name="verify_otp">Verify OTP</string>

    <string name="enter_otp">Enter OTP</string>
    <string name="register">Register</string>
    <string name="description">Description</string>
    <string name="venue">Venue</string>
    <string name="rounds">Number of Rounds</string>
    <string name="rules">Rules</string>
    <string name="instructions">Instructions</string>
    <string name="reset_password">Reset Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_password_text">"Forgot Password?
Set a new one!"</string>

    <string name="personal_info">Personal Info</string>
    <string name="edit">Edit</string>
    <string name="verify_mobile_number">Click Here to Verify Mobile Number</string>
    <string name="otp_verified_status">OTP Verified Status</string>
    <string name="no_user_logged_in">No User Logged In</string>
    <string name="logout">Logout</string>
    <string name="password_reset_sent_text">We\'ve emailed you instructions for setting your password, if an account exists with the email you entered. You should receive them shortly. If you don\'t receive an email, please make sure you\'ve entered the address you registered with, and check your spam folder.</string>
    <string name="loading_details_please_wait">Loading Details! Please Wait ……</string>
    <string name="loading_events_please_wait">Loading Events! Please Wait ……</string>
    <string name="signing_in_please_wait">Signing In! Please Wait ……</string>
    <string name="logging_in_please_wait">Logging In! Please Wait ……</string>
    <string name="verifying_otp_please_wait"> Verifying OTP! Please Wait ……</string>
    <string name="registering_please_wait">Registering! Please Wait ……</string>
    <string name="contacts">Contacts</string>
    <string name="feel_free_to_contact_here">Feel free to contact here</string>
    <string name="profile">Profile</string>
    <string name="app_team">App Team</string>


    <string-array name="boomMenuButtonOptions">

        <item>Gallery</item>
        <item>Sponsors</item>
        <item>Contacts</item>
        <item>App Team</item>
        <item>Head Team</item>
        <item>Vigyaan</item>

    </string-array>

</resources>

