<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/bottom_nav_home"
        android:title="@string/home" />

    <item
        android:id="@+id/nav_events"
        android:icon="@drawable/bottom_nav_events"
        android:title="@string/events" />

    <!--<item
        android:id="@+id/nav_attraction"
        android:icon="@drawable/bottom_nav_attractions"
        android:title="@string/attraction" />

    <item
        android:id="@+id/nav_schedule"
        android:icon="@drawable/bottom_nav_schedule"
        android:title="@string/schedule" />-->

    <item
        android:id="@+id/nav_account"
        android:icon="@drawable/bottom_nav_account"
        android:title="@string/account" />

</menu>
