<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/auth_background"
    tools:context=".ui.activities.ForgotPasswordActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/authFragmentMarginHorizontal"
        android:layout_marginEnd="@dimen/authFragmentMarginHorizontal"
        android:paddingTop="@dimen/authLayoutPaddingTop"
        android:paddingBottom="@dimen/authLayoutPaddingBottom">

        <Button
            android:id="@+id/buReset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tilEmail"
            android:layout_marginTop="@dimen/authButtonMarginTop"
            android:layout_marginEnd="@dimen/authButtonMarginEnd"
            android:background="@drawable/button_background"
            android:fontFamily="@font/gotham"
            android:text="@string/reset_password"
            android:textColor="@color/authButtonText"
            android:textSize="@dimen/authButtonTextSize"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="@string/forgot_password_text"
            android:lineSpacingExtra="@dimen/authHeadingLineSpacing"
            android:textColor="@color/toggleActiveText"
            android:textSize="@dimen/authHeadingTextSize"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEmail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/authEditTextHeight"
            android:layout_below="@+id/tvHeading"
            android:layout_marginTop="@dimen/authEditTextMarginTop"
            android:textColorHint="@color/authEditTextHint"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="@dimen/authEditTextCornerRadius"
            app:boxCornerRadiusBottomStart="@dimen/authEditTextCornerRadius"
            app:boxCornerRadiusTopEnd="@dimen/authEditTextCornerRadius"
            app:boxCornerRadiusTopStart="@dimen/authEditTextCornerRadius"
            app:boxStrokeColor="@color/authEditTextBoxStroke"
            app:boxStrokeWidth="@dimen/authEditTextBoxStrokeWidth">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/authEditTextMarginStart"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingEnd="@dimen/authEditTextPaddingEnd"
                android:textColor="@color/authEditTextText"
                tools:ignore="RtlSymmetry" />

        </com.google.android.material.textfield.TextInputLayout>

    </RelativeLayout>

</LinearLayout>